Added help texts

--- a/templates/results.html
+++ b/templates/results.html
@@ -276,9 +276,8 @@
           </div>
           <div class="modal-body">
             <p>Your Whatsapp online status is always public.</p>
-            <p>
-              Click <a href="mailto:support@whatsapp.com" class=\"btn btn-primary">here</a>
-              to email Whatsapp about adding a privacy settings
+            <p class="down">
+              <a href="mailto:support@whatsapp.com" class="btn btn-success">email Whatsapp about adding a privacy settings</a>
             </p>
           </div>
           <div class="modal-footer">
@@ -299,9 +298,8 @@
             <p>
               Your Facebook ID and data can be found from your phone number through a Facebook service.
             <p>
-            <p>
-              Click <a href="https://www.facebook.com/settings?tab=privacy&section=findphone&view">here</a>
-              to prevent programs like this from finding your Facebook ID through your phone number.
+            <p classs="down">
+               <a href="https://www.facebook.com/settings?tab=privacy&section=findphone&view" class="btn btn-success">prevent programs like this from finding your Facebook ID through your phone number</a>
             </p>
           </div>
           <div class="modal-footer">
@@ -322,9 +320,8 @@
             <p>
               Your name can be found by Google through image-searching your profile pic.
             </p>
-            <p>
-              Click <a href="https://www.facebook.com/settings?tab=privacy&section=search&view">here</a>
-              to hide your Facebook profile from search engines.
+            <p class="down">
+              <a href="https://www.facebook.com/settings?tab=privacy&section=search&view" class="btn btn-success">hide your Facebook profile from search engines</a>
             </p>
           </div>
           <div class="modal-footer">
