--- a/templates/results.html
+++ b/templates/results.html
@@ -278,10 +278,10 @@
             <h4 class="modal-title">Source: WhatsApp Online Status</h4>
           </div>
           <div class="modal-body">
-            <p>Your Whatsapp online status is always public.</p>
+            <p>Your WhatsApp online status is always public.</p>
             <p>
               Click <a href="mailto:support@whatsapp.com" class=\"btn btn-primary">here</a>
-              to email Whatsapp about adding a privacy settings
+              to email WhatsApp about adding privacy settings.
             </p>
           </div>
           <div class="modal-footer">
@@ -323,7 +323,7 @@
           </div>
           <div class="modal-body">
             <p>
-              Your name can be found by Google through image-searching your profile pic.
+              Your name can be found by Google through image-searching your profile picture.
             </p>
             <p>
               Click <a href="https://www.facebook.com/settings?tab=privacy&section=search&view">here</a>
