--- a/templates/results.html
+++ b/templates/results.html
@@ -278,9 +278,9 @@
             <h4 class="modal-title">Source: WhatsApp Online Status</h4>
           </div>
           <div class="modal-body">
-            <p>Your Whatsapp online status is always public.</p>
+            <p>Your WhatsApp online status is always public.</p>
             <p class="down">
-              <a href="mailto:support@whatsapp.com" class="btn btn-success">email Whatsapp about adding a privacy settings</a>
+              <a href="mailto:support@whatsapp.com" class="btn btn-success">email WhatsApp about adding privacy settings.</a>
             </p>
           </div>
           <div class="modal-footer">
