--- a/templates/results.html
+++ b/templates/results.html
@@ -248,6 +248,7 @@
             <h5>Facebook ID: <span id="fbid" /></h5>
             <h5>Facebook login: <span id="fbusername" /></h5>
             <h5>Gender: <span id="fbgender" /></h5>
+            <img src="" alt="" id="fbimgurl">
           </div>
         </div>
       </div>
