added help text

--- a/templates/results.html
+++ b/templates/results.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/app.css?v=0001" rel="stylesheet">
+    <link href="/static/css/app.css?v=0002" rel="stylesheet">
     <link href="/static/css/nv.d3.css" rel="stylesheet">
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -269,6 +269,40 @@
       </div>
     </div>
 
+    <div class="container widget">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Tell me more</h3>
+        </div>
+        <div class="panel-body">
+          <p>Every time you sign up for an online service like WhatsApp or Facebook, you provide lots of personal information: name, email address, sometimes your phone number, picture, and more. Most users don't think twice before filling out this information. But every time you submit personal details, do you think about who will be able to view them?</p>
+          <p>Some services like WhatsApp don't have any privacy controls, so the information you provide is always public. Other services like Facebook have privacy controls that default to public, so the information is made public until you choose otherwise. Individually, these services might not expose too many personal details, but in aggregate, they can reveal a shockingly large collection of facts.</p>
+
+          <h2>Recommended tools to protect your privacy</h2>
+
+          <h4 clas="down"><a href="https://disconnect.me">Disconnect</a></h4>
+          <p>
+            blocks tracking cookies by default, including cookies from social networking sites like Facebook and Twitter that monitor your browsing even off-site.
+          </p>
+
+          <h4><a href="http://noscript.net">NoScript (Firefox)</a> and <a href="https://chrome.google.com/webstore/detail/scriptsafe/oiigbmnaadbkfbmpbfijlflahbdbdgdf?hl=en">ScriptSafe (Chrome)</a></h4>
+          <p>
+            disable all scripts from running by default on webpages you visit.
+          </p>
+
+          <h4><a href="https://addons.mozilla.org/en-US/firefox/addon/flashblock">Flashblock (Firefox)</a> and <a href="https://chrome.google.com/webstore/detail/flashblock/gofhjkjmkpinhpoiabjplobcaignabnl?hl=en">Flashblock (Chrome)</a></h4>
+          <p>
+            blocks flash by default unless you choose to load it.
+          </p>
+
+          <h4><a href="https://www.eff.org/https-everywhere ">HTTPS Everywhere</a></h4>
+          <p>
+            will send all your connections through a secure channel whenever possible.
+          </p>
+        </div>
+      </div>
+    </div>
+
 
     <!-- modals -->
     <div class="modal fade modal-explain modal-explain-whatsapp">
@@ -334,6 +368,9 @@
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+
+
+
 
     <!-- <div class="container querying">
       <div class="loading"><span class="glyphicon glyphicon-refresh"></span></div>
