--- a/templates/results.html
+++ b/templates/results.html
@@ -263,12 +263,15 @@
             <div class="cta" data-explain="google"><span class="glyphicon glyphicon-info-sign"></span></div>
           </div>
           <div class="panel-body">
-            <div id="resultsFrame">
+            <div id="resultsFrame"></div>
           </div>
         </div>
       </div>
     </div>
 
+    <div class="container widget" id="footer">
+      <p>An <a href="https://israeltechallenge.com/">Israel Tech Challenge</a> hackathon project created by Dina Betser, Noam Brown, Jacob Hurwitz, Oz Katz, Max Kleiman-Weiner, and Eric Pelz.<br />Special thanks to Shlomi Hod and the Israel Tech Challenge team!</p>
+    </div>
 
     <!-- modals -->
     <div class="modal fade modal-explain modal-explain-whatsapp">
