--- a/templates/purple.html
+++ b/templates/purple.html
@@ -64,6 +64,10 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
+    <div class="container widget">
+      <p>An <a href="https://israeltechallenge.com/">Israel Tech Challenge</a> hackathon project created by Dina Betser, Noam Brown, Jacob Hurwitz, Oz Katz, Max Kleiman-Weiner, and Eric Pelz.<br />Special thanks to Shlomi Hod and the Israel Tech Challenge team!</p>
+    </div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
