--- a/templates/purple.html
+++ b/templates/purple.html
@@ -37,6 +37,7 @@
 	  </div>
 	  <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
 	  </form>
+    <div class="small-line">With country code, eg: 12125551234, 97254222111</div>
 	</div>
 
   <div class="container" style="text-align: center; margin-top: 150px;">
