--- a/templates/purple.html
+++ b/templates/purple.html
@@ -66,7 +66,7 @@
     </div><!-- /.modal -->
 
     <div class="container widget">
-      <p>An <a href="https://israeltechallenge.com/">Israel Tech Challenge</a> hackathon project created by Dina Betser, Noam Brown, Jacob Hurwitz, Oz Katz, Max Kleiman-Weiner, and Eric Pelz.<br />Special thanks to Shlomi Hod and the Israel Tech Challenge team!</p>
+      <p>An <a href="https://israeltechallenge.com/" target="_blank">Israel Tech Challenge</a> hackathon project created by Dina Betser, Noam Brown, Jacob Hurwitz, Oz Katz, Max Kleiman-Weiner, and Eric Pelz.<br />Special thanks to Shlomi Hod and the Israel Tech Challenge team!</p>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
