--- a/templates/results.html
+++ b/templates/results.html
@@ -100,6 +100,7 @@
           },
           error: function(data) {
             $('#whatsApp').removeClass('querying').addClass('hidden');
+            $('#reverseImage').removeClass('querying').addClass('hidden');
           },
         });
 
